            - Split out the old Triangulation::TopologyLock machinery into
              new standalone classes, which are now used with Link as well.
        Class TreeBag:
            - Renamed type() and subtype() to niceType() and niceIndex()
              respectively.  Moreover, niceType() now returns a NiceType, not
              an int.  The old functions are kept but deprecated.
        Enum TreeDecompositionAlg:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., TD_UPPER) have been
              renamed as scoped enum values (e.g., TreeDecompositionAlg::Upper).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Class Triangulation<dim>:
            - New routines hasLocks(), lockBoundary(), and unlockAll(), to
              work with locked top-dimensional simplices and their facets.
            - New routine reorderBFS(), which essentially makes the old
              Triangulation<3>::reorderTetrahedraBFS() available in all
              dimensions.
            - New routine randomiseLabelling().
            - New routine hash(), which uses the tight encoding.
            - New routines dot() and writeDot().
            - Renamed dumpConstruction() to source(), and extended it to produce
              either C++ and Python code via an optional language argument.
              The old C++-only dumpConstruction() is kept but deprecated.
            - The two-argument copy constructor is now a three-argument
              copy constructor, giving an additional boolean option for
              whether to clone simplex/facet locks.
            - Replaced makeDoubleCover() with doubleCover(), which returns the
              result as a new triangulation.  The old routine is kept but
              deprecated.
            - Renamed simplifiedFundamentalGroup to setGroupPresentation().