@@ -217,7 +217,8 @@ void addTreeDecomposition(pybind11::module_& m) {
 
             t.reroot(costSame.data(), costReverse.data(), costRoot.data());
         }, rdoc::reroot_2)
-        .def("dot", &TreeDecomposition::dot, rdoc::dot)
+        .def("dot", &TreeDecomposition::dot,
+            pybind11::arg("dark") = false, rdoc::dot)
         .def("pace", &TreeDecomposition::pace, rdoc::pace)
         .def_static("fromPACE",
             overload_cast<const std::string&>(&TreeDecomposition::fromPACE),
